# ARA

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Core/src/ARA/Core/: ARAApplication.cpp  ARAApplication.h  ARAApplicationObject.h  ARACharset.h  ARAColor.h  ARAController.h  ARADrawer.h  ARADynLib.cpp  ARADynLib.h  ARAElement.cpp  ARAElement.h  ARAElementBorder.h  ARAElementStyle.cpp  ARAElementStyle.h  ARAError.h  ARAEvent.h  ARAEventEmitter.cpp  ARAEventEmitter.h  ARAEventListener.cpp  ARAEventListener.h  ARAFont.h  ARAGlyphInfo.h  ARAInheritable.h  ARAIntersectionResult.h  ARAKeyModifiersMask.h  ARALineBreakMode.h  ARAMouseButton.h  ARANode.h  ARAPath.cpp  ARAPath.h  ARAPlatform.h  ARAPlugin.h  ARAPoint2.h  ARARange.h  ARARect2.h  ARARect2Edges.h  ARARectCorner.h  ARARectEdge.h  ARASize2.h  ARAView.cpp  (+24 more)
Core/src/ARA/Core/OSX/: Config.h
Examples/: CMakeLists.txt
Examples/FirstApp/: CMakeLists.txt  main.cpp
Modules/: CMakeLists.txt
Modules/Controls/: CMakeLists.txt  README.md
Modules/Controls/src/ARA/Controls/: Button.cpp  Button.h  Control.cpp  Control.h  ControlActionMask.h  ControlActionValidator.h  ControlState.h  Controls.h  Input.cpp  Input.h  Platform.h
Modules/Db/: CMakeLists.txt  README.md
Modules/Db/src/ARA/Db/: DbCondition.cpp  DbCondition.h  DbConditionOperator.h  DbConnection.h  DbConnectionPlugin.h  DbData.cpp  DbData.h  DbModel.h  DbPlatform.h  DbRequest.cpp  DbRequest.h  DbRequestType.h  DbResult.cpp  DbResult.h
Modules/Hri/: CMakeLists.txt
Modules/Hri/src/ARA/Hri/: Command.cpp  Command.h  CommandEncoder.cpp  CommandEncoder.h  CommandQueue.cpp  CommandQueue.h  GPUBuffer.cpp  GPUBuffer.h  GPUResource.cpp  GPUResource.h  GPUTexture.cpp  GPUTexture.h  GPUTextureType.h  GPUTextureUsage.h  LoadAction.h  Platform.h  RenderDevice.cpp  RenderDevice.h  RenderEncoder.cpp  RenderEncoder.h  RenderPass.h  RenderPassAttachment.h  RenderPassColorAttachment.h  RenderPassDepthAttachment.h  RenderPassStencilAttachment.h  RenderView.h  RenderViewController.cpp  RenderViewController.h  StoreAction.h
Modules/Text/: CMakeLists.txt  README.md
Modules/Text/src/ARA/Text/: ARATextAlignment.h  ARATextElement.cpp  ARATextElement.h  ARATextFrame.cpp  ARATextFrame.h  ARATextGlyphRun.cpp  ARATextGlyphRun.h  ARATextLine.cpp  ARATextLine.h  ARATextParagraph.cpp  ARATextParagraph.h  ARATextParagraphAttributes.h  ARATextPlatform.h  ARATextString.cpp  ARATextString.h  ElementStyle.cpp  ElementStyle.h
Plugins/: CMakeLists.txt
Plugins/Cocoa/: CMakeLists.txt  README.md
Plugins/Cocoa/src/ARA/Cocoa/: ARACocoaApplication.h  ARACocoaApplication.mm  ARACocoaPlatform.h  ARACocoaPlugin.mm  OSXDrawer.h  OSXDrawer.mm  OSXFont.h  OSXFont.mm  OSXNSView.h  OSXNSView.mm  OSXNSWindow.h  OSXNSWindow.mm  OSXPath.h  OSXPath.mm  OSXRenderView.h  OSXView.h  OSXView.mm  OSXWindow.h  OSXWindow.mm
Plugins/Cocoa/src/ARA/Cocoa/Metal/: AAViewMTL.h  AAViewMTL.mm  Platform.h  RenderView.h  RenderView.mm
Plugins/RenderDeviceMTL/: CMakeLists.txt  README.md
Plugins/RenderDeviceMTL/src/: CommandMTL.h  CommandMTL.mm  CommandQueueMTL.h  CommandQueueMTL.mm  Enums.h  GPUBufferMTL.h  GPUBufferMTL.mm  GPUTextureMTL.h  GPUTextureMTL.mm  Platform.h  Plugin.mm  RenderDeviceMTL.h  RenderDeviceMTL.mm  RenderEncoderMTL.h  RenderEncoderMTL.mm  RenderPass.h  RenderPass.mm
