
file(GLOB ARA_CORE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/ARA/Core/*.h)
file(GLOB ARA_CORE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/ARA/Core/*.cpp)

add_library(
    ARACore 
    SHARED 
    ${ARA_CORE_HEADERS} 
    ${ARA_CORE_SOURCES})

set_property(
    TARGET ARACore 
    PROPERTY PUBLIC_HEADER ${ARA_CORE_HEADERS})

target_include_directories(
    ARACore 
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)

install(
    TARGETS ARACore 
    LIBRARY DESTINATION ${ARA_INSTALL_PREFIX}
    PUBLIC_HEADER DESTINATION ${ARA_INSTALL_PREFIX}/ARA/Core)
